# libfmanager

./: CMakeLists.txt  README.md  libfmanager.cpp  libfmanager.hpp
doc/: CMakeLists.txt  generate.sh
doc/man/: CMakeLists.txt  FindGZIP.cmake  fmanager_FINFO.3  fmanager_TIME.3  fmanager_changeDirectory.3  fmanager_checkAvailable.3  fmanager_checkDirectory.3  fmanager_checkFile.3  fmanager_checkType.3  fmanager_cleanPath.3  fmanager_copyDirectory.3  fmanager_copyFile.3  fmanager_createDirectory.3  fmanager_createFile.3  fmanager_fileAttr.3  fmanager_fileType.3  fmanager_getChildPath.3  fmanager_getError.3  fmanager_getFileInfo.3  fmanager_getFullPath.3  fmanager_getLDir.3  fmanager_getTopPath.3  fmanager_isFullPath.3  fmanager_listDirectory.3  fmanager_makeDirectory.3  fmanager_mergeFiles.3  fmanager_moveDirectory.3  fmanager_moveFile.3  fmanager_removeDirectory.3  fmanager_removeFile.3  fmanager_searchDirectory.3  fmanager_splitFile.3  fmanager_splitFilePart.3  fmanager_splitFileSize.3  libfmanager.3
